# nrepl.hx

./: .callgraph.edn  .gitignore  .harper-dictionary.txt  CHANGELOG.md  Cargo.toml  LAYER2_COMPLETE.md  README.md  cog.scm  install.sh  keybindings-example.scm  nrepl.scm
.github/workflows/: release.yml
cogs/: nrepl.scm  package.scm
cogs/nrepl/: adapter-interface.scm  adapter-utils.scm  alias-picker.scm  alias-selection.scm  clojure-servers.scm  clojure.scm  cog.scm  commands.scm  completion-model.scm  connection.scm  core.scm  elixir-servers.scm  elixir.scm  erlang-servers.scm  erlang.scm  file-utils.scm  format-docs.scm  generic.scm  guile.scm  jack-in-config.scm  janet-servers.scm  janet.scm  lookup-picker.scm  output.scm  picker-utils.scm  port-management.scm  process-manager.scm  project-detection.scm  project-file-picker.scm  project-file-types.scm  python.scm  scheme-server-picker.scm  scheme-servers.scm  server-picker.scm  server-recipe.scm  session-picker.scm  sorting-utils.scm  steel.scm  string-utils.scm  style-utils.scm  (+2 more)
crates/nrepl-client/: Cargo.toml
crates/nrepl-client/src/: error.rs
crates/nrepl-rs/: Cargo.toml
crates/nrepl-rs/examples/: simple_eval.rs
crates/nrepl-rs/src/: codec.rs  connection.rs  error.rs  lib.rs  message.rs  ops.rs  session.rs  worker.rs
crates/nrepl-rs/tests/: error_paths.rs  integration.rs
crates/nrepl-rs/tests/common/: mod.rs
crates/steel-nrepl/: Cargo.toml  README.md
crates/steel-nrepl/proptest-regressions/: connection.txt
crates/steel-nrepl/src/: callback.rs  connection.rs  error.rs  lib.rs  registry.rs  worker.rs
crates/steel-nrepl/tests/: ffi_integration.rs  multi_eval_repro.rs  registry_stats.rs
scripts/: install-local.sh
tests/: harness.scm  run-all.sh  test-adapters.scm  test-completion-model.scm  test-jack-in-config.scm  test-parse-ffi-sexp.scm  test-port-management.scm  test-project-detection.scm  test-sorting-utils.scm  test-string-utils.scm  test-style-utils.scm
tests/fixtures/clj-project/: deps.edn
tests/fixtures/config-bad-project/.helix/: nrepl-jack-in.scm
tests/fixtures/config-mw-project/.helix/: nrepl-jack-in.scm
tests/fixtures/config-project/.helix/: nrepl-jack-in.scm
tests/fixtures/lein-project/: project.clj
tests/fixtures/shadow-project/: shadow-cljs.edn
