[workspace]
resolver = "2"
members = [
  "crates/nrepl-rs",
  "crates/steel-nrepl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/waddie/nrepl.hx"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Utilities
lazy_static = "1.5"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
# Steel FFI (only for steel-nrepl crate)
steel-core = { git = "https://github.com/mattwparas/steel.git", version = "0.7.0", features = [
  "dylibs",
  "sync"
] }
# Error handling
thiserror = "2.0"
# Async runtime
tokio = { version = "1.49", features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "sync",
  "time"
] }

[profile.release]
opt-level = "z"
strip = true
lto = true
