[workspace]
resolver = "2"
members = [
  "crates/nrepl-rs",
  "crates/steel-nrepl",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
repository = "https://github.com/waddie/nrepl.hx"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
# Steel FFI (only for steel-nrepl crate)
steel-core = {
  git = "https://github.com/mattwparas/steel.git",
  version = "0.8.2",
  features = ["dylibs", "sync"]
}
# Error handling
thiserror = "2.0"
# Async runtime
tokio = {
  version = "1.52",
  features = ["io-util", "macros", "net", "rt", "sync", "time"]
}

[profile.release]
opt-level = "z"
strip = true
lto = true
