[package]
name = "nrepl-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async nREPL client library"
keywords = ["nrepl", "repl", "async", "client"]
categories = ["development-tools"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_bencode = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = "0.4"
