[package]
name = "steel-nrepl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Steel FFI wrapper for nREPL client"

[lib]
crate-type = ["cdylib"]

[dependencies]
nrepl-rs = { path = "../nrepl-rs" }
steel-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
lazy_static = { workspace = true }
