[package]
name = "steel-nrepl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Steel FFI wrapper for nREPL client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nrepl-rs = { path = "../nrepl-rs" }
steel-core = { workspace = true }
steel-derive = { git = "https://github.com/mattwparas/steel.git", version = "0.6.0" }
tokio = { workspace = true, features = ["full"] }
lazy_static = { workspace = true }
abi_stable = "0.11"

[dev-dependencies]
proptest = "1.5"
